# Cursova_robota_1

./: CMakeLists.txt  README.md
src/app/: CMakeLists.txt  decart_graph_widget.cpp  decart_graph_widget.h  main.cpp  matrix_model.cpp  matrix_model.hpp  window.cpp  window.h  window.ui
src/logic/: CMakeLists.txt  danylevsky_matrix_eigen_vv.hpp  danylevsky_matrix_eihen_vv.cpp  eigen_finder.cpp  eigen_finder.h  extremum_finder.hpp  iteration_extremum_finder.cpp  iteration_extremum_finder.hpp  matrix.cpp  matrix.hpp  matrix_eigen_vv.hpp  rotation_matrix_eigen_vv.cpp  rotation_matrix_eigen_vv.hpp  stat_provider.hpp  utils.cpp  utils.hpp  vec.cpp  vec.hpp
test/: CMakeLists.txt  test_logic.cpp
